@@ -53,18 +53,63 @@ Config and indexes are stored in `~/.codesearch/`.
 
 ## MCP server setup
 
-Add to your Claude Desktop config:
+### Claude Code (user-level, recommended)
 
-```json
-{
-  "mcpServers": {
-    "pharos": {
-      "command": "java",
-      "args": ["-jar", "/path/to/codesearch.jar", "mcp-server"]
-    }
-  }
-}
+Build the fat JAR and copy it to a stable location so it won't be overwritten by `mvn clean`:
+
+```bash
+mvn clean package -DskipTests
+mkdir -p ~/.pharos/bin
+cp target/pharos-*.jar ~/.pharos/bin/pharos.jar
 ```
+
+Register it with the Claude Code CLI at user scope (available in all projects):
+
+```bash
+claude mcp add -s user pharos -- java --enable-native-access=ALL-UNNAMED -jar ~/.pharos/bin/pharos.jar mcp-server
+```
+
+Verify it's connected:
+
+```bash
+claude mcp list
+# pharos: java -jar ... mcp-server - ✓ Connected
+```
+
+Claude Code starts the process once per session and keeps it alive for all tool calls. The JVM startup cost (~1-2s) is paid once per session.
+
+### Claude Code skill
+
+A Claude Code skill is bundled at `.claude/skills/pharos/SKILL.md`. It teaches Claude when and how to use the `pharos` CLI for code navigation.
+
+**To activate for all your projects (user-level):**
+```bash
+mkdir -p ~/.claude/skills/pharos
+cp .claude/skills/pharos/SKILL.md ~/.claude/skills/pharos/SKILL.md
+```
+
+**To activate for a single project only**, copy it into that project:
+```bash
+mkdir -p /path/to/your-project/.claude/skills/pharos
+cp .claude/skills/pharos/SKILL.md /path/to/your-project/.claude/skills/pharos/SKILL.md
+```
+
+Once installed, Claude Code will automatically use `pharos` CLI commands for code search and navigation instead of grep or file reads, when the project is indexed.
+
+### Available MCP tools
+
+| Tool | Description |
+|---|---|
+| `search_code` | BM25/vector/hybrid search across indexed methods and classes |
+| `get_method` | Fetch full method body by FQN |
+| `get_callers` | Find all methods that call a given method |
+| `get_callees` | Find all methods called by a given method |
+| `find_call_path` | Shortest call chain between two methods |
+| `list_projects` | List indexed projects with stats |
+| `list_modules` | All modules in the Maven dependency graph |
+| `get_module_deps` | Direct/transitive deps and dependents of a module |
+| `find_module_path` | Shortest Maven dependency path between two modules |
+| `get_module_boundary` | Entry points and external call exit points for a module |
 
 ## How it works
 
